fix: changed font and spacing of rsvp

--- a/styles.css
+++ b/styles.css
@@ -310,6 +310,7 @@ li {
 	border-bottom: 2px solid white;
 	width: 25%;
 	margin: 0 auto;
+	
 }
 
 .rsvp{
@@ -319,10 +320,12 @@ li {
 	padding: 30px 0;
 	background-color:rgba(247, 247, 247, 0.918);
 	border-radius: 5px;
+	color: #222;
 }
 
 .rsvp-title{
-	font-size: 35px;
+	font-size: 45px;
+	font-family: 'Ms Madi';
 }
 
 .checkbox-list{
